New model space module added, supporting model testing and external model quantization features

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -10,6 +10,7 @@
     "success": "Success",
     "error": "Error",
     "warning": "Warning",
+    "info": "Info",
     "yes": "Yes",
     "no": "No",
     "ok": "OK",
@@ -19,7 +20,9 @@
     "connectionError": "Unable to connect to server",
     "exportFailed": "Export failed",
     "errorDetails": "Error Details",
-    "create": "Create"
+    "create": "Create",
+    "upload": "Upload",
+    "uploading": "Uploading..."
   },
   "project": {
     "title": "AI Model Project List",
@@ -47,7 +50,6 @@
     "status": "Status",
     "startTime": "Start Time",
     "endTime": "End Time",
-    "modelSize": "Model Size",
     "epochs": "Epochs",
     "batchSize": "Batch Size",
     "imageSize": "Image Size",
@@ -88,7 +90,6 @@
     "batchSizeLabel": "Batch Size",
     "imageSizeLabel": "Image Size",
     "deviceLabel": "Device",
-    "devicePlaceholder": "Leave empty for auto (cpu/cuda/0/1/mps...)",
     "optional": "Optional",
     "startTraining": "Start Training",
     "startTrainingFailed": "Failed to start training",
@@ -248,6 +249,7 @@
     "trainModel": "Train Model",
     "importDataset": "Import Dataset",
     "exportDataset": "Export Dataset",
+    "selectClassFirst": "Please select a class first",
     "exporting": "Exporting...",
     "exportYOLO": "Export YOLO Training Dataset",
     "exportZIP": "Export Annotation ZIP Package",
@@ -299,7 +301,8 @@
   "nav": {
     "dashboard": "Dashboard",
     "modelTraining": "Model Training",
-    "projects": "AI Model Projects"
+    "projects": "AI Model Projects",
+    "models": "Model Space"
   },
   "dashboard": {
     "title": "AI Model Project Workflow",
@@ -391,6 +394,86 @@
     "keySave": "Ctrl+S",
     "keyEsc": "Esc",
     "keyEnter": "Enter"
+  },
+  "modelSpace": {
+    "title": "Model Space",
+    "subtitle": "Centralized management of all trained and quantized models for browsing, downloading, testing and deleting",
+    "empty": "No model records yet",
+    "loadFailed": "Failed to load models. Please click Refresh to retry.",
+    "project": "Project",
+    "trainingId": "Training ID",
+    "source": "Source",
+    "sourceTraining": "From Training",
+    "sourceQuantization": "From Quantization",
+    "sourceImport": "Imported",
+    "status": "Status",
+    "modelConfig": "Model Config",
+    "classes": "Classes",
+    "metrics": "Key Metrics",
+    "time": "Time",
+    "createdTime": "Created Time",
+    "inputSize": "Input Size",
+    "actions": "Actions",
+    "viewDetail": "Training Details / Test",
+    "download": "Download Model",
+    "test": "Test Model",
+    "testNotSupported": "This model does not support testing",
+    "testFailed": "Test failed",
+    "testResults": "Test Results",
+    "detectionCount": "Detection Count",
+    "annotatedImage": "Annotated Image",
+    "detections": "Detections",
+    "testCompleted": "Test completed, please check the new window",
+    "browse": "Browse Related Files",
+    "browseTitle": "Browse Related Files",
+    "uploadModel": "Upload Model",
+    "uploadModelQuantize": "Upload Model for Quantization",
+    "uploadFile": "Model File",
+    "selectedFile": "Selected",
+    "modelNamePlaceholder": "Enter model name",
+    "associateProject": "Associate Project",
+    "noProject": "No Project",
+    "numClasses": "Number of Classes",
+    "classNames": "Class Names",
+    "uploadOnlyPt": "Only .pt model files are supported",
+    "uploadRequired": "Please select a model file and enter model name",
+    "uploadSuccess": "Model uploaded successfully",
+    "uploadFailed": "Upload failed",
+    "quantize": "Quantize to NE301",
+    "quantizeTitle": "Quantize to NE301",
+    "quantizeConfirm": "Are you sure you want to quantize the following model to NE301 format?",
+    "quantizeParams": "Quantization Parameters",
+    "quantizationType": "Quantization Type",
+    "calibrationFraction": "Calibration Dataset Fraction",
+    "quantizeNote": "Note: The quantization process may take several minutes, please be patient.",
+    "quantizeInputSizeHelp": "Set the input image size for quantization (256-640)",
+    "quantizing": "Quantizing...",
+    "startQuantize": "Start Quantization",
+    "quantizeSuccess": "Model quantized successfully",
+    "quantizeFailed": "Quantization failed",
+    "quantizeOnlyPt": "Only .pt models can be quantized",
+    "filterByType": "Filter by Type",
+    "filterAll": "All",
+    "filterYolov8": "YOLOv8",
+    "filterYolov11": "YOLOv11",
+    "filterNe301": "NE301",
+    "addClassName": "Enter class name",
+    "classNamesHelp": "Manually add class names for model testing and deployment. Add in order according to class index.",
+    "manualInput": "Manual Input",
+    "jsonInput": "JSON Array",
+    "jsonInputPlaceholder": "e.g.: [\"class1\", \"class2\", \"class3\"]",
+    "jsonInputHint": "Enter class names in JSON array format, e.g.: [\"person\", \"car\", \"bicycle\"]",
+    "selectFile": "Select File",
+    "changeFile": "Change File",
+    "noFilteredResults": "No models match the filter",
+    "browseFailed": "Failed to fetch related files",
+    "tfliteFile": "TFLite File",
+    "jsonFile": "JSON Config File",
+    "noRelatedFiles": "No related files found",
+    "model": "Model",
+    "modelName": "Model Name",
+    "modelType": "Model Type",
+    "unknownProject": "No Project"
   },
   "mqtt": {
     "title": "MQTT",
