--- a/frontend/src/i18n/locales/zh.json
+++ b/frontend/src/i18n/locales/zh.json
@@ -10,6 +10,7 @@
     "success": "成功",
     "error": "错误",
     "warning": "警告",
+    "info": "提示",
     "yes": "是",
     "no": "否",
     "ok": "确定",
@@ -19,7 +20,9 @@
     "connectionError": "无法连接到服务器",
     "exportFailed": "导出失败",
     "errorDetails": "失败详情",
-    "create": "创建"
+    "create": "创建",
+    "upload": "上传",
+    "uploading": "上传中..."
   },
   "project": {
     "title": "AI模型项目列表",
@@ -246,6 +249,7 @@
     "trainModel": "训练模型",
     "importDataset": "导入数据集",
     "exportDataset": "导出数据集",
+    "selectClassFirst": "请先选择类别",
     "exporting": "导出中...",
     "exportYOLO": "导出YOLO训练数据集",
     "exportZIP": "导出标注ZIP 包",
@@ -297,7 +301,8 @@
   "nav": {
     "dashboard": "工作台",
     "modelTraining": "模型训练",
-    "projects": "AI模型项目管理"
+    "projects": "AI模型项目管理",
+    "models": "模型空间"
   },
   "dashboard": {
     "title": "AI模型项目工作流",
@@ -389,6 +394,86 @@
     "keySave": "Ctrl+S",
     "keyEsc": "Esc",
     "keyEnter": "Enter"
+  },
+  "modelSpace": {
+    "title": "模型空间",
+    "subtitle": "集中管理所有训练模型与量化模型，可统一浏览、下载、测试与删除",
+    "empty": "暂无模型记录",
+    "loadFailed": "模型列表加载失败，请点击右上角刷新重试",
+    "project": "项目 / 模型",
+    "trainingId": "训练ID",
+    "source": "来源",
+    "sourceTraining": "训练产生",
+    "sourceQuantization": "量化产生",
+    "sourceImport": "外部导入",
+    "status": "状态",
+    "modelConfig": "模型配置",
+    "classes": "类别",
+    "metrics": "关键指标",
+    "time": "时间",
+    "createdTime": "创建时间",
+    "inputSize": "输入尺寸",
+    "actions": "操作",
+    "viewDetail": "训练详情/测试",
+    "download": "下载模型",
+    "test": "测试模型",
+    "testNotSupported": "该模型不支持测试",
+    "testFailed": "测试失败",
+    "testResults": "测试结果",
+    "detectionCount": "检测数量",
+    "annotatedImage": "标注图像",
+    "detections": "检测结果",
+    "testCompleted": "测试完成，请查看新窗口",
+    "browse": "浏览关联文件",
+    "browseTitle": "浏览关联文件",
+    "uploadModel": "上传模型",
+    "uploadModelQuantize": "上传模型量化",
+    "uploadFile": "模型文件",
+    "selectedFile": "已选择",
+    "modelNamePlaceholder": "请输入模型名称",
+    "associateProject": "关联项目",
+    "noProject": "不关联项目",
+    "numClasses": "类别数量",
+    "classNames": "类别名称",
+    "uploadOnlyPt": "只能上传 .pt 模型文件",
+    "uploadRequired": "请选择模型文件并输入模型名称",
+    "uploadSuccess": "模型上传成功",
+    "uploadFailed": "上传失败",
+    "quantize": "量化为 NE301",
+    "quantizeTitle": "量化为 NE301",
+    "quantizeConfirm": "确定要将以下模型量化为 NE301 格式吗？",
+    "quantizeParams": "量化参数",
+    "quantizationType": "量化类型",
+    "calibrationFraction": "校准数据集比例",
+    "quantizeNote": "注意：量化过程可能需要几分钟时间，请耐心等待。",
+    "quantizeInputSizeHelp": "设置量化时的输入图像尺寸（256-640）",
+    "quantizing": "量化中...",
+    "startQuantize": "开始量化",
+    "quantizeSuccess": "模型量化成功",
+    "quantizeFailed": "量化失败",
+    "quantizeOnlyPt": "只能量化 .pt 模型",
+    "filterByType": "按类型筛选",
+    "filterAll": "全部",
+    "filterYolov8": "YOLOv8",
+    "filterYolov11": "YOLOv11",
+    "filterNe301": "NE301",
+    "addClassName": "输入类别名称",
+    "classNamesHelp": "可手动添加类别名称，用于模型测试和部署。顺序按照类索引顺序添加。",
+    "manualInput": "手动添加",
+    "jsonInput": "JSON 数组",
+    "jsonInputPlaceholder": "例如: [\"class1\", \"class2\", \"class3\"]",
+    "jsonInputHint": "输入 JSON 数组格式的类别名称，例如：[\"person\", \"car\", \"bicycle\"]",
+    "selectFile": "选择文件",
+    "changeFile": "更换文件",
+    "noFilteredResults": "没有找到符合条件的模型",
+    "browseFailed": "获取关联文件失败",
+    "tfliteFile": "TFLite 文件",
+    "jsonFile": "JSON 配置文件",
+    "noRelatedFiles": "未找到关联文件",
+    "model": "模型",
+    "modelName": "模型名称",
+    "modelType": "模型类型",
+    "unknownProject": "未关联项目"
   },
   "mqtt": {
     "title": "MQTT",
